--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         console.log(1+6);
     </script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"> /*JS connection to jquery*/ </script>
+    
     <script src="scripts.js"> /*JS connection to HTML*/
     </script>
 
